--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-SpeechRecognition==3.10.0
-openai>=1.0.0
-python-dotenv==1.0.0
 flask==2.0.1
-werkzeug==2.0.3
-setuptools>=65.5.1 
+gtts==2.2.3
+openai==0.27.0
+python-dotenv==0.19.0
+SpeechRecognition==3.8.1
+pydub==0.25.1
+numpy==1.21.0 
