--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "runtime": "python3.9"
+        "runtime": "python3.9",
+        "maxLambdaSize": "15mb"
       }
     }
   ],
@@ -18,4 +19,5 @@
   "env": {
     "PYTHONUNBUFFERED": "1"
   }
+  // Updated configuration for Vercel deployment
 } 
