--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask==2.0.1
-gtts==2.2.3
-openai==0.27.0
-python-dotenv==0.19.0
-SpeechRecognition==3.8.1
+flask==3.0.0
+gtts==2.4.0
+openai==1.12.0
+python-dotenv==1.0.0
+SpeechRecognition==3.10.1
 pydub==0.25.1
-numpy==1.21.0 
+numpy==1.26.3
+Werkzeug==3.0.1 
